syntax = "proto3";

package keyauth.endpoint;
option go_package = "github.com/infraboard/keyauth/pkg/endpoint";

import "github.com/infraboard/mcube/cmd/protoc-gen-go-ext/extension/tag/tag.proto";

// Resource todo
message Resource {
    // 资源所属服务名称
    string service_id = 1[
        (google.protobuf.field_tag) = {struct_tag: 'json:"service_id"'}
        ];
    // 资源名称
    string name = 2[
        (google.protobuf.field_tag) = {struct_tag: 'json:"name"'}
        ];
    // 资源支持操作的path
    repeated string paths = 3[
        (google.protobuf.field_tag) = {struct_tag: 'json:"paths"'}
        ];
    // 支持操作的方法
    repeated string methods = 4[
        (google.protobuf.field_tag) = {struct_tag: 'json:"methods"'}
        ];
    // 支持操作的函数
    repeated string functions = 5[
        (google.protobuf.field_tag) = {struct_tag: 'json:"functions"'}
        ];
    // 支持操作的动作
    repeated string actions = 6[
        (google.protobuf.field_tag) = {struct_tag: 'json:"actions"'}
        ];
}

message ResourceSet {
    int64 total = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"total" json:"total"'}
        ];
    repeated Resource items = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"items" json:"items"'}
        ];
}
